# emx-onnx-symbolic-shapes

./: AGENTS.md  COMPREHENSIVE_OVERVIEW.md  README.md  agents.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: rfc-oscl.md  rfc-otsl.md  test-engine-status.md
oscl/: __init__.py  ast.py  engine.py  lexer.py  loader.py  parser.py
oscl/specs/: acosh.oscl  add.oscl  affinegrid.oscl  argmin.oscl  attention.oscl  averagepool.oscl  bernoulli.oscl  castlike.oscl  centercroppad.oscl  col2im.oscl  compress.oscl  concat.oscl  concatfromsequence.oscl  constant.oscl  constantofshape.oscl  conv.oscl  convinteger.oscl  convtranspose.oscl  deformconv.oscl  depthtospace.oscl  dequantizelinear.oscl  det.oscl  dft.oscl  div.oscl  dropout.oscl  dynamicquantizelinear.oscl  einsum.oscl  expand.oscl  flatten.oscl  gather.oscl  gatherelements.oscl  gathernd.oscl  gemm.oscl  globalaveragepool.oscl  globalmaxpool.oscl  gridsample.oscl  gru.oscl  hannwindow.oscl  if.oscl  instancenormalization.oscl  (+57 more)
otsl/: __init__.py  engine.py  lexer.py  loader.py  numerical_engine.py  numpy_engine.py  parser.py
otsl/specs/: adam.otsl  argmin.otsl  cast.otsl  concat.otsl  concatfromsequence.otsl  constant.otsl  constantofshape.otsl  (+31 more)
tests/: generate_test_engine_expected.py  generate_test_engine_status.py  generate_test_numerical_engine_expected.py  generate_test_numerical_engine_status.py  generate_test_numpy_engine_expected.py  official_engine_suite.py  official_numerical_engine_suite.py  test_engine.py  test_engine_status.py  test_lexer.py  test_loader.py  test_numerical_engine.py  test_numerical_engine_status.py  test_numpy_engine.py  test_parser.py
(+3 files in other folders)
